# FMMA

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: actions.yml  actions_blas.yml  benchmark.yml  requirements.txt  tutorials.yml
artifacts/benchmark results/: error.csv  time.csv
benchmark/: .gitignore  CMakeLists.txt  plot_error.py  plot_time.py  plot_time_vs_error.py  run_benchmark.sh
benchmark/results/: all_1.csv  all_2.csv  error_1.csv  error_2.csv  time_1.csv  time_2.csv
benchmark/src/: sample1.cpp  sample2.cpp
cmake/: blas.cmake  common.cmake  gpu.cmake  makelib.cmake  options.cmake  set_name.cmake
cpython/: pyfmma.cpp
include/: fmma.hpp
include/fmma/: chebyshev_approx.hpp  fmma.hpp  math.hpp
src/: chebyshev_approx.cpp  fmm.cpp  fmm_core.cpp  fmma.cpp  math.cpp  nrnmm.cpp  tree.cpp
test/: CMakeLists.txt  run_test.sh
test/src/: test_common.hpp
test/src/chebyshev_approx/: common.cpp
test/src/fmma/: blas.cpp  common.cpp  fmm.cpp  m2m.cpp  nrnmm.cpp  tree.cpp
test/src/math/: common.cpp  kernel_approx.cpp
tutorials/: CMakeLists.txt  README.md  tutorial.cmake
tutorials/tutorial01/: CMakeLists.txt  tutorial01.cpp  tutorial01.py
tutorials/tutorial02/: CMakeLists.txt  tutorial02.cpp  tutorial02.py
tutorials/tutorial03/: CMakeLists.txt  tutorial03.cpp  tutorial03.py
tutorials/tutorial04/: CMakeLists.txt  tutorial04.cpp  tutorial04.py
tutorials/tutorial05/: CMakeLists.txt  tutorial05.cpp  tutorial05.py
